[fix] slider z-index on mobile.

--- a/client/src/components/layouts/Nav/helpers/MobileNav/MobileNav.scss
+++ b/client/src/components/layouts/Nav/helpers/MobileNav/MobileNav.scss
@@ -2,6 +2,7 @@
 
 .mobile-nav {
   @include nav-container;
+  z-index: 2;
 
   &__dashboard-link {
     display: flex;
